--- a/app/src/main/res/layout/activity_customization.xml
+++ b/app/src/main/res/layout/activity_customization.xml
@@ -6,4 +6,272 @@
     android:layout_height="match_parent"
     tools:context=".Activities.CustomizationActivity">
 
+    <TextView
+        android:id="@+id/cust_Title"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="Customize the Recommendation"
+        android:textSize="27dp"
+        android:textStyle="bold"
+        android:layout_marginTop="20dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
+    <TextView
+        android:id="@+id/like_q"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="What do you like?"
+        android:textSize="22dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginLeft="18dp"
+        android:layout_alignParentLeft="true"
+        app:layout_constraintTop_toBottomOf="@+id/cust_Title"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
+    <LinearLayout
+        android:id="@+id/checkBox_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_2"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/like_q"
+        app:layout_constraintBottom_toTopOf="@+id/time_q">
+        <CheckBox
+            android:id="@+id/checkBox_ame"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="American"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barbecue"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_chi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chinese"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_French"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="French"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_3"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_1"
+        app:layout_constraintTop_toBottomOf="@+id/like_q"
+        app:layout_constraintBottom_toTopOf="@+id/time_q">
+        <CheckBox
+            android:id="@+id/checkBox_ham"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hamburger"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_ind"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Indian"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_itl"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Italian"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_jap"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Japanese"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_4"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_2"
+        app:layout_constraintTop_toBottomOf="@+id/like_q"
+        app:layout_constraintBottom_toTopOf="@+id/time_q">
+        <CheckBox
+            android:id="@+id/checkBox_mex"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mexican"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_piz"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pizza"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_sea"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seafood"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_stk"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Steak"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_3"
+        app:layout_constraintTop_toBottomOf="@+id/like_q"
+        app:layout_constraintBottom_toTopOf="@+id/time_q">
+        <CheckBox
+            android:id="@+id/checkBox_sus"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sushi"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+        <CheckBox
+            android:id="@+id/checkBox_thai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thai"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
+    </LinearLayout>
+    <TextView
+        android:id="@+id/time_q"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="When do you eat?"
+        android:textSize="22dp"
+        android:layout_marginTop="280dp"
+        android:layout_marginLeft="18dp"
+        android:layout_alignParentLeft="true"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintVertical_bias="0.498" />
+
+    <LinearLayout
+        android:id="@+id/boxEat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time_q"
+        app:layout_constraintBottom_toTopOf="@+id/boxdinEat">
+
+    <EditText
+        android:id="@+id/lunch_txt"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SELECT LUNCH TIME"
+        android:id="@+id/lunch_time"
+        app:layout_constraintStart_toEndOf="@+id/lunch_txt"
+     />
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/boxdinEat"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/time_q"
+        app:layout_constraintBottom_toTopOf="@+id/boxCont">
+
+    <EditText
+        android:id="@+id/din_txt"
+        android:layout_width="200dp"
+        android:layout_height="wrap_content"
+        android:layout_alignParentLeft="true"
+        android:layout_alignParentStart="true"
+        />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="SELECT DINNER TIME"
+        android:id="@+id/din_time"
+        />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:id="@+id/boxCont"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:orientation="horizontal"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/boxdinEat"
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <Button
+            android:id="@+id/cus_back"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginRight="100dp"
+            android:text="Back"
+            />
+
+        <Button
+            android:id="@+id/cus_save"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Save"
+            />
+    </LinearLayout>
+
+
+
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
