--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -12,6 +12,14 @@
         android:orientation="vertical"
         android:padding="16dp"
         app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:id="@+id/test_test"
+            android:text="TO ROULETTE"
+            android:textSize="18sp"
+            />
+
 
         <Button
             android:id="@+id/btn_customization"
@@ -56,6 +64,18 @@
             android:background="@color/colorPrimaryDark"
             android:padding="16dp"
             android:text="TO MAP"
+            android:textSize="18sp"
+            android:layout_marginTop="10dp"
+            android:textColor="@android:color/white"
+            android:textAllCaps="false"
+            />
+        <Button
+            android:id="@+id/btn_rec"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@color/colorPrimaryDark"
+            android:padding="16dp"
+            android:text="TO RECOMMENDATION"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/white"
