--- a/app/src/main/res/menu/button_menu.xml
+++ b/app/src/main/res/menu/button_menu.xml
@@ -3,31 +3,16 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     >
     <item
-        android:id="@+id/action_market"
+        android:id="@+id/backButton"
         android:enabled="true"
-        android:title="Market"
-        android:icon="@drawable/ic_shopping_basket_black_24dp"
+        android:title="Go back"
+        android:icon="@drawable/ic_arrow_back_black_24dp"
         app:showAsAction="ifRoom"/>
 
     <item
-        android:id="@+id/action_school"
+        android:id="@+id/showRestaurantsButton"
         android:enabled="true"
-        android:title="School"
-        android:icon="@drawable/ic_school_black_24dp"
-        app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/action_restaurant"
-        android:enabled="true"
-        android:title="Restaurant"
+        android:title="Show restaurants"
         android:icon="@drawable/ic_restaurant_black_24dp"
         app:showAsAction="ifRoom"/>
-
-    <item
-        android:id="@+id/action_hospital"
-        android:enabled="true"
-        android:title="Hospital"
-        android:icon="@drawable/ic_local_hospital_black_24dp"
-        app:showAsAction="ifRoom"/>
-
 </menu>
