--- a/app/src/main/res/layout/activity_roulette.xml
+++ b/app/src/main/res/layout/activity_roulette.xml
@@ -6,4 +6,217 @@
     android:layout_height="match_parent"
     tools:context=".Activities.RouletteActivity">
 
+    <LinearLayout
+        android:id="@+id/banner"
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        android:orientation="horizontal"
+        app:layout_constraintTop_toTopOf="parent">
+        <TextView
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:layout_height="wrap_content"
+            android:text="Food Roulette"
+            android:gravity="center"
+            android:textSize="40dp"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_weight="0.3"
+            android:layout_height="wrap_content"
+            android:text="Roll!"
+            android:id="@+id/roll"
+            android:onClick="toRoll"
+            android:textSize="26dp"
+            />
+    </LinearLayout>
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/banner"
+        android:text="uncheck all"
+        android:id="@+id/uncheck"
+        android:layout_marginTop="20dp"
+        />
+
+    <LinearLayout
+        android:id="@+id/checkBox_1"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_2"
+        app:layout_constraintStart_toStartOf="parent"
+        android:layout_marginTop="20dp"
+        app:layout_constraintTop_toBottomOf="@+id/uncheck"
+        >
+        <CheckBox
+            android:id="@+id/checkBox_american"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="American" />
+        <CheckBox
+            android:id="@+id/checkBox_barbeque"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Barbecue" />
+        <CheckBox
+            android:id="@+id/checkBox_chinese"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Chinese"/>
+        <CheckBox
+            android:id="@+id/checkBox_french"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="French" />
+
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_2"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_3"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_1"
+        app:layout_constraintTop_toBottomOf="@+id/uncheck"
+        >
+        <CheckBox
+            android:id="@+id/checkBox_hamburger"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Hamburger" />
+        <CheckBox
+            android:id="@+id/checkBox_indian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Indian" />
+        <CheckBox
+            android:id="@+id/checkBox_italian"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Italian" />
+        <CheckBox
+            android:id="@+id/checkBox_japanese"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Japanese"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_3"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toStartOf="@+id/checkBox_4"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_2"
+        app:layout_constraintTop_toBottomOf="@+id/uncheck"
+        >
+        <CheckBox
+            android:id="@+id/checkBox_mexican"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Mexican" />
+        <CheckBox
+            android:id="@+id/checkBox_pizza"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Pizza"/>
+        <CheckBox
+            android:id="@+id/checkBox_seafood"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Seafood" />
+        <CheckBox
+            android:id="@+id/checkBox_steak"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Steak" />
+    </LinearLayout>
+    <LinearLayout
+        android:id="@+id/checkBox_4"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:gravity="left"
+        android:orientation="vertical"
+        android:layout_marginTop="20dp"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/checkBox_3"
+        app:layout_constraintTop_toBottomOf="@+id/uncheck"
+        >
+        <CheckBox
+            android:id="@+id/checkBox_sushi"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Sushi" />
+        <CheckBox
+            android:id="@+id/checkBox_thai"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Thai" />
+
+    </LinearLayout>
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:id="@+id/addFoodBar"
+        android:layout_marginTop="20dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/checkBox_1">
+
+        <EditText
+            android:layout_width="0dp"
+            android:layout_weight="0.7"
+            android:id="@+id/foodNameText"
+            android:layout_height="60dp"
+            android:hint="Add Other Foods"
+            />
+        <Button
+            android:layout_width="0dp"
+            android:layout_height="wrap_content"
+            android:text="Add"
+            android:id="@+id/foodNameButton"
+            android:onClick="addFood"
+            android:textSize="20dp"
+            android:layout_weight="0.3"/>
+    </LinearLayout>
+
+    <ListView
+        android:id="@+id/foods"
+        android:layout_width="match_parent"
+        android:layout_height="180dp"
+        android:layout_marginStart="4dp"
+        android:layout_marginLeft="4dp"
+        android:layout_marginTop="8dp"
+        android:layout_marginEnd="4dp"
+        android:layout_marginRight="4dp"
+        android:gravity="left"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/addFoodBar" />
+
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="back"
+        android:id="@+id/backToMain"
+        android:onClick="addFood"
+        android:textSize="20dp"
+        android:layout_marginTop="10dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintTop_toBottomOf="@+id/foods"/>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
