--- a/app/src/main/res/layout/activity_place_detail.xml
+++ b/app/src/main/res/layout/activity_place_detail.xml
@@ -15,7 +15,7 @@
         <ImageView
             android:layout_width="match_parent"
             android:layout_height="200dp"
-            android:id="@+id/photo"
+            android:id="@+id/place_photo"
             android:src="@drawable/ic_location_searching_black"/>
 
         <LinearLayout
@@ -40,27 +40,19 @@
                 android:textSize="16dp"
                 android:textStyle="italic"
                 android:text="Place Address" />
+
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:id="@+id/place_open_hours"
+                android:id="@+id/place_open"
                 android:textSize="18dp"
                 android:textStyle="bold"
-                android:text="Open Now: " />
-
+                android:text="Open?" />
             <RatingBar
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:id="@+id/rating-bar"
                 android:max="5"/>
-
-            <Button
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:id="@+id/btn_show_map"
-                android:text="Show On Map"
-                style="@style/Widget.AppCompat.Button.Colored"/>
-
 
         </LinearLayout>
 
