--- a/app/src/main/res/layout/activity_roll.xml
+++ b/app/src/main/res/layout/activity_roll.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".Activities.RollActivity">
+        tools:context=".activities.RollActivity">
 
     <TextView
         android:layout_width="match_parent"
