--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -19,7 +19,8 @@
             android:layout_weight="0.75"
             android:layout_height="wrap_content"
             android:text="Welcome defaultUser!"
-            android:textSize="16dp"/>
+            android:textSize="16dp"
+            android:layout_gravity="center"/>
         <Button
             android:id="@+id/btn_logout"
             android:layout_width="0dp"
@@ -34,6 +35,27 @@
             />
     </LinearLayout>
 
+    <LinearLayout
+        android:id="@+id/logo"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:gravity="center"
+        android:layout_marginTop="30dp"
+        app:layout_constraintTop_toBottomOf="@id/top"
+        app:layout_constraintStart_toStartOf="parent">
+        <ImageView
+            android:layout_width="60dp"
+            android:layout_height="60dp"
+            android:src="@drawable/food_icon"
+        />
+        <TextView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="Food Me"
+            android:fontFamily="sans-serif-black"
+            android:textSize="40dp"/>
+    </LinearLayout>
+
 
 
 
@@ -42,10 +64,9 @@
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="16dp"
-        app:layout_constraintTop_toBottomOf="@id/top"
-        android:layout_marginTop="10dp">
 
-
+        app:layout_constraintTop_toBottomOf="@id/logo"
+        android:layout_marginTop="40dp">
 
         <Button
             android:id="@+id/btn_customization"
@@ -78,18 +99,6 @@
             android:background="@color/colorPrimaryDark"
             android:padding="16dp"
             android:text="TO GALLERY"
-            android:textSize="18sp"
-            android:layout_marginTop="10dp"
-            android:textColor="@android:color/white"
-            android:textAllCaps="false"
-            />
-        <Button
-            android:id="@+id/btn_map"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:background="@color/colorPrimaryDark"
-            android:padding="16dp"
-            android:text="TO MAP"
             android:textSize="18sp"
             android:layout_marginTop="10dp"
             android:textColor="@android:color/white"
